fastapi-hello/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-hello
  annotations:
    # remove rewrite; not needed for simple path
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: fastapi-hello
            port:
              number: 80
